# HandTrackerRAPID

./: README.md  pom.xml
HandTrackerJNI/: CMakeLists.txt  HandTracker.cpp  HandTrackerThread.cpp  HandTrackerThread.h  JNIHelper.h  README.md
HandTrackerJNI/eu/project/rapid/handtracker/: HandTrackerJNI.java
Resources/: compressLibs.sh  log4j2.xml
Resources/libs/: Editor  HandTrackerSandbox  Viewer  libOpenMeshCore.so.2.4  libboost_context.so.1.57.0  libboost_coroutine.so.1.57.0  libboost_filesystem.so.1.57.0  libboost_log.so.1.57.0  libboost_program_options.so.1.57.0  libboost_serialization.so.1.57.0  libboost_system.so.1.57.0  libboost_thread.so.1.57.0  linkLibs.sh
Resources/libs/frames/human/: colorFrame_0_00000.pnm  depthFrame_0_00000.pnm
Resources/media/: hand_left.xml  hand_left_high.xml  hand_right.xml  hand_right_ex.xml  hand_right_ex_low.xml  hand_right_high.xml  hand_right_low.xml  human_simple.xml  script.acquisition
Scripts/: buildEverything.sh  compressHandTracker.sh  getMultiRunPerformancePlot.sh  getPerformancePlot.sh  runAccelerationServer.sh  runHandTracker.sh
src/: HandTrackerJNI.h
src/eu/project/rapid/handtracker/: HandTracker.java  HandTrackerJNI.java
src/eu/project/rapid/handtrackerapp/: HandTrackerApp.java  HandTrackerAppSerialization.java
